# hash_kit

./: .gitignore  .master.sh  build.ps1  hash_kit.spec  main.py  master.ps1  master.sh  pyproject.toml  template_docx_1.docx
.scripts/linux/: build.sh
.scripts/windows/: build.ps1
scripts/linux/: build.sh  download-build-wheels.sh  setup-build.sh  setup-dev.sh
scripts/windows/: activate-build.ps1  activate-dev.ps1  build.ps1  setup-build.ps1  setup-dev.ps1
