[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "HashKit"
version = "0.9.1"
description = "A cross-platform file hashing utility"
requires-python = ">3.9"
dependencies = [
    "Pyside6==6.9.1",
]

#[project.scripts]
#hashkit = "hash_kit.main:main"

[project.optional-dependencies]
build = [
    "pyinstaller==6.14.1",
]
