[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "HashKit"
version = "0.9.21"
description = "A cross-platform file hashing utility"
requires-python = ">3.9"
dependencies = [
    "Pyside6",
    "docxtpl"
]

#[project.scripts]
#hashkit = "hash_kit.main:main"

[project.optional-dependencies]
build = [
    "pyinstaller",
]

# Fix for flat-layout discovery error
[tool.setuptools.packages.find]
exclude = [
    "build_wheels_win*","build_wheels_linux*",
    ".venv-build*", ".venv-dev*",
    "icons*"
]
#exclude = []
